fix(markup): socials adblock visibility

--- a/src/components/socials/style.pcss
+++ b/src/components/socials/style.pcss
@@ -1,6 +1,6 @@
 @import "../../styles/mixins.pcss";
 
-.socials {
+.soc1als {
   &__list {
     @media (--mobile-above) {
       justify-content: flex-end;
